tests/baselines/reference/missingTypeArguments2.errors.txt
tests/cases/compiler/missingTypeArguments2.ts(3,14): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/missingTypeArguments2.ts(4,5): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/missingTypeArguments2.ts(5,10): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/missingTypeArguments2.ts(6,5): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/missingTypeArguments2.ts (4 errors) ====
    class A<T> { }
    
    var x: () => A;
                 ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    (a: A) => { };
        ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var y: A<A>;
             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    (): A => null;
        ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.